<resources>
    <string name="app_name">IBuilder</string>
    <!-- Главный экран (MainActivity.kt)   -->
    <string name="button_save_name">Сохранить игру</string>
    <string name="button_load_name">Загрузить игру</string>
    <string name="header_indicators">Экономические показатели:</string>
    <string name="header_indicators_resources">Ресурсы:</string>
    <string name="header_indicators_citizens">Население:</string>
    <string name="header_indicators_buildings">Постройки:</string>
    <string name="header_notice">Игровые события:</string>
    <string name="textview_notice">Журнал последних игровых событий - пуст.</string>
    <string name="button_buildings">Постройки</string>
    <string name="button_resources">Ресурсы</string>
    <string name="button_citizen">Население</string>
    <string name="button_move_next">Следующий ход</string>
    <string name="button_exchange_resources">Обмен ресурсов</string>
    <string name="button_next_era">Следующая эпоха</string>
    <string name="header_current_era">Текущая эпоха:</string>
    <string name="header_current_day">Текущий ход:</string>

    <!-- Экран Постройки (BuildingMainActivity.kt)   -->
    <string name="textview_radio_building">Здание не выбрано</string>
    <string name="building_gold">Золотой рудник\n(5 золота)</string>
    <string name="building_stone">Каменный рудник\n(3 золота)</string>
    <string name="building_wood">Лесопилка\n(3 леса)</string>
    <string name="building_food">Ферма\n(2 леса)</string>
    <string name="building_house_workers">Жилище работников\n(2 леса)</string>
    <string name="building_tavern">Таверна\n(15 леса)</string>
    <string name="building_circus">Ярмарка\n(30 леса)</string>
    <string name="building_church">Храм\n(40 камня)</string>
    <string name="button_construction">Построить здание</string>
    <string name="button_status_construction">Прогресс строительства</string>
    <string name="button_working_buildings">Работающие производства</string>
    <string name="button_add_workers">Распределить рабочих</string>
    <string name="button_remove_workers">Снять рабочих</string>
    <string name="header_producer_buildings">Работающие постройки:</string>
    <string name="button_building_information">Дополнительная информация о здании</string>

    <!-- Экран покупки / продажи ресурсов (BuildingMainActivity.kt)   -->
    <string name="button_buy_resources">Купить</string>
    <string name="button_sell_resources">Продать</string>
    <string name="resource_gold">Золото</string>
    <string name="resource_wood">Лес</string>
    <string name="resource_food">Еда</string>
    <string name="resource_stone">Камень</string>
    <string name="header_buy">Цена покупки:</string>
    <string name="header_cell">Цена продажи:</string>
    <string name="header_count_operations_exchange">Количество доступных операций:</string>
    <string name="hint_edit_resourse">Введите количество ресурсов</string>

    <!-- Экран Население (CitizensActivity.kt)   -->
    <string name="header_total_workers">Всего рабочих:</string>
    <string name="header_tax_rate">Ставка налога:</string>
    <string name="header_total_tax">Итоговый доход:</string>
    <string name="header_satisfaction_citizens">Рейтинг удовлетворенности граждан:</string>
    <string name="button_update_tax_rate">Обновить налоговую ставку</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="hint_edit_new_tax">Введите новую налоговую ставку</string>

    <string-array name="buildings">
        <item>Выберите здание:</item>
        <item>Золотой рудник (5 золота)</item>
        <item>Каменный рудник (3 золота)</item>
        <item>Лесопилка (3 леса)</item>
        <item>Ферма (2 леса)</item>
        <item>Дом работника (2 леса)</item>
        <item>Таверна (15 леса)</item>
        <item>Ярмарка (30 леса)</item>
        <item>Храм (40 камня)</item>
    </string-array>

</resources>