<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CitizensActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/header_indicators_citizens"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_total_workers"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_citizens_count_workers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:text=""
            android:textSize="15sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_tax_rate"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_citizens_tax_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:text=""
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_total_tax"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_citizens_total_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text=""
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_satisfaction_citizens"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_citizens_satisfaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text=""
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <EditText
        android:id="@+id/editText_citizens_new_tax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/hint_edit_new_tax"
        android:inputType="number"
        android:minHeight="48dp" />


    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="10dp"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:layout_marginEnd="10dp"-->
    <!--        android:orientation="horizontal">-->

    <!--        <Button-->
    <!--            android:id="@+id/button_citizens_decrement_tax"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_weight="1"-->
    <!--            android:onClick="decrementTaxRate"-->
    <!--            android:text="@string/decrement" />-->

    <!--        <TextView-->
    <!--            android:id="@+id/textView_citizens_tax"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_gravity="center_vertical"-->
    <!--            android:layout_weight="1"-->
    <!--            android:gravity="center"-->
    <!--            android:textSize="20sp"-->
    <!--            tools:text="0" />-->

    <!--        <Button-->
    <!--            android:id="@+id/button_citizens_increment_tax"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_weight="1"-->
    <!--            android:onClick="incrementTaxRate"-->
    <!--            android:text="@string/increment" />-->

    <!--    </LinearLayout>-->

    <Button
        android:id="@+id/button_citizens_change_tax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:onClick="updateTaxRate"
        android:text="@string/button_update_tax_rate" />


</LinearLayout>