<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ExchangeResourcesActivity">

        <LinearLayout
            android:id="@+id/header_exchange_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/header_notice"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_exchange_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_exchange_notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:text="@string/textview_notice"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_exchange_buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_exchange_header_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="11dp"
                android:text="@string/header_buy"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_exchange_buy_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="11dp"
                android:text=""
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="5dp"
                android:text="@string/currency"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_exchange_sell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_exchange_header_sell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="11dp"
                android:text="@string/header_cell"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_exchange_sell_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="11dp"
                android:text=""
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="5dp"
                android:text="@string/currency"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_exchange_radios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radios_exchange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_notice_building">

                <RadioButton android:id="@+id/radiobutton_exchange_stone"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:onClick="selectTypeResources"
                    android:text="@string/resource_stone" />

                <RadioButton android:id="@+id/radiobutton_exchange_wood"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:onClick="selectTypeResources"
                    android:text="@string/resource_wood" />

                <RadioButton android:id="@+id/radiobutton_exchange_food"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:onClick="selectTypeResources"
                    android:text="@string/resource_food" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_exchange_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_exchange_decrement_quantity"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:onClick="decrementQuantity"
                android:text="-" />

            <TextView
                android:id="@+id/textView_exchange_quantity"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:textSize="20sp"
                android:text="1"
                />

            <Button
                android:id="@+id/button_exchange_increment_quantity"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:onClick="incrementQuantity"
                android:text="+" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_exchange_buttons_resources"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_exchange_buy_resources"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:onClick="buyResources"
                android:text="@string/button_buy_resources" />

            <Button
                android:id="@+id/button_exchange_sell_resources"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:onClick="sellResources"
                android:text="@string/button_sell_resources" />

        </LinearLayout>



    </LinearLayout>

</ScrollView>